--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -6,3 +6,20 @@
 body {
     position: relative;
 }
+
+
+body {
+  overflow-x: hidden;
+  color: rgb(29, 29, 31);
+  letter-spacing: -0.05em;
+  background-color: white;
+}
+
+p {
+  line-height: 1.6;
+}
+
+a {
+  color: rgb(29, 29, 31);
+  text-decoration: none;
+}
