--- a/src/scss/module/nav.scss
+++ b/src/scss/module/nav.scss
@@ -1,3 +1,8 @@
+.global-nav,
+.local-nav {
+  padding: 0 1rem;
+}
+
 .global-nav {
   height: 44px;
 }
@@ -18,6 +23,7 @@
 
 .global-nav-links {
   justify-content: space-between;
+  
 }
 
 .product-name {
