--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -92,6 +92,23 @@
 }
 
 
+.sticky-elem {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.scroll-section-0--active #scroll-section-0 .sticky-elem,
+.scroll-section-1--active #scroll-section-1 .sticky-elem,
+.scroll-section-2--active #scroll-section-2 .sticky-elem,
+.scroll-section-3--active #scroll-section-3 .sticky-elem {
+  display: block;
+} 
+
+   
+
 @media (min-width: 1024px) {   
   #scroll-section-0 h1 {
     font-size: 9vw;
