--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -26,13 +26,15 @@
 
 .scroll-section {
   padding-top: 50vh;
-  border: 1px solid red;
 }
 
 #scroll-section-0 {
   h1 {
+    position: relative;
+    z-index: 1;
     font-size: 4rem;
     text-align: center;
+    top: -10vh;
   }
 }
 
@@ -106,27 +108,6 @@
   color: white;
   background-color: darkorange;
 }
-
-.sticky-elem {
-  display: none;
-  position: fixed;
-  left: 0;
-  width: 100%;
-}
-
-.sticky-elem-canvas {
-  top: 0;
-  background: #ccc;
-}
-
-.scroll-section-0--active #scroll-section-0 .sticky-elem,
-.scroll-section-1--active #scroll-section-1 .sticky-elem,
-.scroll-section-2--active #scroll-section-2 .sticky-elem,
-.scroll-section-3--active #scroll-section-3 .sticky-elem {
-  display: block;
-} 
-
-   
 
 @media (min-width: 1024px) {   
   #scroll-section-0 h1 {
