--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -110,6 +110,16 @@
   background-color: darkorange;
 }
 
+#scroll-section-3 {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
+.image-blend-canvas {
+  
+}
+
 @media (min-width: 1024px) {   
   #scroll-section-0 h1 {
     font-size: 9vw;
