Toggle canvas Image stick to screen when it hits the top

--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -117,8 +117,12 @@
   align-items: center;
 }
 
+// Section 3
 .image-blend-canvas {
-  
+  &.sticky {
+    top: 0;
+    position: fixed;
+  }
 }
 
 @media (min-width: 1024px) {   
