--- a/src/scss/module/nav.scss
+++ b/src/scss/module/nav.scss
@@ -1,3 +1,7 @@
+.nav-container {
+
+}
+
 .global-nav,
 .local-nav {
   padding: 0 1rem;
@@ -17,6 +21,14 @@
   top: 45px;
   height: 52px;
   border-bottom: 1px solid #ddd;
+
+  .local-nav-sticky & {
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: saturate(180%) blur(15px);
+  }
+  
 }
 
 .global-nav-links,
