--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -96,9 +96,9 @@
 
 .canvas-caption {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: -5em 0 auto;
   padding: 0 1rem;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   color: #888;
 }
 
