margin-bottom em value added

--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -84,7 +84,7 @@
 
 .mid-message {
   max-width: 1000px;
-  margin: 0 auto 30px;
+  margin: 0 auto 2em;
   padding: 0 1rem;
   font-size: 2rem;
   color: #888;
