--- a/src/scss/module/section.scss
+++ b/src/scss/module/section.scss
@@ -84,7 +84,7 @@
 
 .mid-message {
   max-width: 1000px;
-  margin: 0 auto 2em;
+  margin: 0 auto;
   padding: 0 1rem;
   font-size: 2rem;
   color: #888;
@@ -97,9 +97,9 @@
 
 .canvas-caption {
   max-width: 1000px;
-  margin: -5em 0 auto;
+  margin: -24rem 0 auto;
   padding: 0 1rem;
-  font-size: 2rem;
+  font-size: 1.2rem;
   color: #888;
 }
 
@@ -116,6 +116,7 @@
   display: flex;
   flex-direction: column; 
   align-items: center;
+  border-bottom: 1px solid red;
 }
 
 // Section 3
@@ -133,6 +134,7 @@
   
   .main-message {
     font-size: 4vw;
+    margin-bottom: 2em;
   }
 
   .description {
@@ -168,10 +170,13 @@
 
   .mid-message {
     font-size: 4vw;
+    margin-bottom: 2em;
   }
 
-  .cavas-cpation {
+  .canvas-caption {
     font-size: 2rem;
+    padding: 0;
+    margin-top: -8rem;
   }
 }
 
@@ -181,8 +186,4 @@
   .before-loading & {
     display: none;
   }
-}
-
-.normal-content {
-  margin-bottom: 10rem;
 }
